--- a/form.html/index.html
+++ b/form.html/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <form >
-        <input type="text" name="" id="">
+    <form method="get">
+        <p> Name : <input type="text" name="username"></p>
+        <p>F Name : <input type="text" name="fname"></p>
+        <p>Password : <input type="password"></p>
+        <p><textarea name="textarea" cols="30" rows="10">commit....</textarea></p>
+        <p><input type="" name="" id=""></p>
+        <p>slect</p>
+
+        <select name="options" id="">
+            <option value="option1">a</option>
+            <option value="option2" selected>b</option>
+            <option value="option3">c</option>
+
+        </select>
+
+
+
+
+        <p><input type="submit" name="submit" value="send"></p>
     </form>
 </body>
+
 </html>
