--- a/periodicTable/index.html
+++ b/periodicTable/index.html
@@ -10,128 +10,128 @@
     <table  border="1">
 
 <tr>
-    <td></td>
+    <td style="background-color: e2eeff ;border-color: #0060f0;color: #0060f0;stroke: #0060f0;"><sup>1</sup> H </td>
     <td style="empty-cells: hide;" colspan="16"></td>
     
     
-    <td></td>
+    <td bgcolor="#ffe7eb"><sup>2</sup> He </td>
 
 </tr>
 
 <tr>
-    <td></td>
-    <td></td>
+    <td><sup>3</sup> Li</td>
+    <td><sup>4</sup> Be</td>
     <td style="empty-cells: hide;" colspan="10"></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><sup>5</sup> B</td>
+    <td bgcolor="#e2eeff"><sup>6</sup> C</td>
+    <td bgcolor="#e2eeff"><sup>7</sup> N</td>
+    <td bgcolor="#e2eeff"><sup>8</sup> O</td>
+    <td bgcolor="#e2eeff"><sup>9</sup> F</td>
+    <td bgcolor="#ffe7eb"><sup>10</sup> Ne</td>
 
 </tr>
 
 <tr>
-    <td></td>
-    <td></td>
+    <td><sup>11</sup> Na</td>
+    <td><sup>12</sup> Mg</td>
     <td style="empty-cells: hide;" colspan="10"></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><sup>13</sup> Al</td>
+    <td><sup>14</sup> Si</td>
+    <td bgcolor="#e2eeff"><sup>15</sup> P</td>
+    <td bgcolor="#e2eeff"><sup>16</sup> S</td>
+    <td bgcolor="#e2eeff"><sup>17</sup> Cl</td>
+    <td bgcolor="#ffe7eb"><sup>18</sup> Ar</td>
 
 </tr>
 
 
 <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><sup>19</sup> K</td>
+    <td><sup>20</sup> Ca</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>21</sup> Sc</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>22</sup> Ti</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>23</sup> V</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>24</sup> Cr</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>25</sup> Mn</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>26</sup> Fe</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>27</sup> Co</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>28</sup> Ni</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>29</sup> Cu</td>
+    <td style="background-color: #f3e8fd;border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>30</sup> Zn</td>
+    <td><sup>31</sup> Ga</td>
+    <td><sup>32</sup> Ge</td>
+    <td><sup>33</sup> As</td>
+    <td bgcolor="#e2eeff"><sup>34</sup> Se</td>
+    <td bgcolor="#e2eeff"><sup>35</sup> Br</td>
+    <td bgcolor="#ffe7eb"><sup>36</sup> Kr</td>
 
 </tr>
 
 <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-
-</tr>
-
-
-<tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><sup>37</sup> Rb</td>
+    <td><sup>38</sup> Sr</td>
+    <td><sup>39</sup> Y</td>
+    <td><sup>40</sup> Zr</td>
+    <td><sup>41</sup> Nb</td>
+    <td><sup>42</sup> Mo</td>
+    <td><sup>43</sup> Tc</td>
+    <td><sup>44</sup> Ru</td>
+    <td><sup>45</sup> Rh</td>
+    <td><sup>46</sup> Pd</td>
+    <td><sup>47</sup> Ag</td>
+    <td><sup>48</sup> Cd</td>
+    <td><sup>49</sup> In</td>
+    <td><sup>50</sup> Sn</td>
+    <td><sup>51</sup> Sb</td>
+    <td><sup>52</sup> Te</td>
+    <td><sup>53</sup> I</td>
+    <td><sup>54</sup> Xe</td>
 
 </tr>
 
 
 <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><sup>55</sup> Cs</td>
+    <td><sup>56</sup> Ba</td>
+    <td><sup>57</sup> La</td>
+    <td><sup>72</sup> Hf</td>
+    <td><sup>73</sup> Ta</td>
+    <td><sup>74</sup> W</td>
+    <td><sup>75</sup> Re</td>
+    <td><sup>76</sup> Os</td>
+    <td><sup>77</sup> Ir</td>
+    <td><sup>78</sup> Pt</td>
+    <td><sup>79</sup> Au</td>
+    <td><sup>80</sup> Hg</td>
+    <td><sup>81</sup> Ti</td>
+    <td><sup>82</sup> Pb</td>
+    <td><sup>83</sup> Bi</td>
+    <td><sup>84</sup> Po</td>
+    <td><sup>85</sup> At</td>
+    <td ><sup>86</sup> Rn</td>
+
+</tr>
+
+
+<tr>
+    <td><sup>87</sup> Fr</td>
+    <td><sup>88</sup> Ra</td>
+    <td><sup>89</sup> Ac</td>
+    <td style="background-color: #f3e8fd; border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>104</sup> Rf</td>
+    <td style="background-color: #f3e8fd; border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>105</sup> Db</td>
+    <td style="background-color: #f3e8fd; border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>106</sup> Sg</td>
+    <td style="background-color: #f3e8fd; border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>107</sup> Bh</td>
+    <td style="background-color: #f3e8fd; border-color: #6232ec;color: #6232ec;stroke: #6232ec;"><sup>108</sup> Hs</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>109</sup> Mt</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>110</sup> Ds</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>111</sup> Rg</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>112</sup> Cn</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>113</sup> Nh</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>114</sup> Fl</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>115</sup> Mc</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>116</sup> Lv</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>117</sup> Ts</td>
+    <td style="background-color: #e7e7ea; border-color: #3f374f;color: #3f374f;stroke: #3f374f;"><sup>118</sup> Og</td>
 
 </tr>
 
