--- a/periodicTable/index.html
+++ b/periodicTable/index.html
@@ -27,6 +27,10 @@
         padding: 2px;
         font-size: 20px;
     }
+    td:hover{
+        transform: scale(1.3);
+        cursor: pointer; 
+    }
 
     sup {
         font-size: 10px;
@@ -36,6 +40,7 @@
         background-color: #d8f8ff;
         color: #00758c;
         stroke: #00758c;
+       
     }
 
     .Group_2 {
