--- a/practice.html/index.html
+++ b/practice.html/index.html
@@ -58,9 +58,28 @@
 
 
 
+<form action="" method="get">
 
 
+    <label > User Name : <input   type="text" name="username"></label><br>
+    <label > Password  : <input type="password" name="password"></label>
+<br>
+<input type="submit" name="" id="">
+<textarea name="commit"  cols="30" rows="10">commit...</textarea>
+<br>
+<label ><input type="checkbox" name="name" value="zain" >zain</label>
+<label ><input type="checkbox" name="name" value="ali" >ali</label>
+<label ><input type="checkbox" name="name" value="saad" >saad</label>
+<label ><input type="checkbox" name="name" value="ali2" >ali2</label>
 
+<br>
+<label ><input type="radio" name="name" value="zain" >zain</label>
+<label ><input type="radio" name="name" value="ali" >ali</label>
+<label ><input type="radio" name="name" value="saad" >saad</label>
+<label ><input type="radio" name="name" value="ali2" >ali2</label>
+
+
+</form>
 
 
 
